[gd_scene load_steps=3 format=3 uid="uid://dr2ouxkft76bj"]

[ext_resource type="Script" path="res://scenes/08_hud/setupDlg/setup_dlg.gd" id="1_uias6"]
[ext_resource type="Script" path="res://scenes/08_hud/setupDlg/audioTab.gd" id="1_ydunt"]

[node name="Window" type="Window"]
initial_position = 2
size = Vector2i(400, 300)
script = ExtResource("1_uias6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Audio" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("1_ydunt")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer5"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CheckButtonMasterEn" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
button_pressed = true
text = "Master"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer6"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HSliderMaster" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CheckButtonMusicEn" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
button_pressed = true
text = "Musica"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HSliderMusic" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CheckButtonFxEn" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
button_pressed = true
text = "Sound Fx"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HSliderSoundFx" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonAceptar" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCELAR"

[node name="ButtonCancelar" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ACEPTAR"

[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer5/CheckButtonMasterEn" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_check_button_master_en_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer6/HSliderMaster" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_h_slider_master_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer/CheckButtonMusicEn" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_check_button_music_en_toggled"]
[connection signal="changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3/HSliderMusic" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_h_slider_music_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2/CheckButtonFxEn" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_check_button_fx_en_toggled"]
[connection signal="changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer4/HSliderSoundFx" to="MarginContainer/VBoxContainer/TabContainer/Audio" method="_on_h_slider_sound_fx_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonAceptar" to="." method="_on_button_aceptar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonCancelar" to="." method="_on_button_cancelar_pressed"]
